--- a/html/careers/data-science.html
+++ b/html/careers/data-science.html
@@ -173,7 +173,7 @@ There are three general steps to becoming a data scientist:
             </div>
             <div id="resources">
                 <h4>Recommended Articles</h4>
-                <p>If you want to do further research around the area of web development, then these articles will
+                <p>If you want to do further research around the area of Data Science, then these articles will
                     be of interest to you:
                 </p>
                 <ul>
