--- a/html/careers/data-science.html
+++ b/html/careers/data-science.html
@@ -96,7 +96,7 @@
 
     <div id="courses-skills">
         <h2>
-            Courses and Skills Required To Be A Data Scientits
+            Courses and Skills Required To Be A Data Scientist
 
         </h2>
         <h3>Math:</h3>
