added a new page named graphic designing

--- a/index.html
+++ b/index.html
@@ -194,9 +194,16 @@
                 </div>
             </div>
             <div class="career-item">
-                <div class="career-title">Lorem Ipsum</div>
+                <div class="career-title">Graphic Design</div>
                 <div class="career-description">
-                    <p></p>
+                    <img src="images/career-images/Graphic-Designing.jpg" alt="">
+                    <p>
+                        Graphic design is a craft where professionals create visual content to communicate messages. 
+                        By applying visual hierarchy and page layout techniques, designers use typography and pictures
+                         to meet users’ specific needs and focus on the logic of displaying elements in interactive 
+                         designs, to optimize the user experience.
+                         <a href="html/careers/graphic-design.html">see more</a>
+                    </p>
                 </div>
             </div>
         </div>
