--- a/html/careers/information-security.html
+++ b/html/careers/information-security.html
@@ -38,7 +38,7 @@
 
         <div class="content">
             <p>
-                In the world of medicine, it’s not possible to become a neurosurgeon or a cardiologist overnight 
+                In the world of medicine, its not possible to become a neurosurgeon or a cardiologist overnight 
                 but requires foundation training in medicine(MBBS) followed by further specialization in medicine 
                 or surgery before going for super specialization. Likewise, the world of information technology (IT) 
                 has become a field of specialists, just as in medicine; the progression in the career would depend 
@@ -116,9 +116,9 @@
         <div class="aquiring-skills">
            <h3>How to Obtain These Skills</h3>
                 <p>
-                    There are many ways to obtain the knowledge you’ll need for becoming an information security 
-                    professional – but to actually master the relevant skills, you will need to spend some time 
-                    practicing and experimenting with what you’ve learned. There is no substitute for hands-on experience. 
+                    There are many ways to obtain the knowledge youll need for becoming an information security 
+                    professional but to actually master the relevant skills, you will need to spend some time 
+                    practicing and experimenting with what youve learned. There is no substitute for hands-on experience. 
                     Most useful resource links have embedded at the bottom of this page.
                 </p>
 
@@ -132,13 +132,13 @@
                 Opportunities are emerging in government, large and small businesses as they increasingly implement IT and net-based solutions. With the cost of information security breach rising to $3.8 mn, organizations are willing to spend more to protect their data and networks.
                 Some of the entry-level to top information security jobs include Chief Information Security Officer, Information Security Engineer, Security Manager, Computer Forensics Expert, Malware Analyst; while at the entry-level university graduates with interest in technology can join the information social security careers business development business with attractive salary and commission. At the entry-level, Risk Consultants interested in working in the areas of compliance, risk management and governance are also sought to deliver solutions for large and complex government organizations.
                 Large organizations such as General Motors are also seeking information security professionals skilled in risk management, information security strategy, threat analysis, data protection, cyber forensics, and other related information security skills.
-                Information Security analysts need to have experience in the implementation of networking – routers, switching, setting up firewalls, intrusion detection, and prevention systems. 
+                Information Security analysts need to have experience in the implementation of networking routers, switching, setting up firewalls, intrusion detection, and prevention systems. 
             </p>
             
             <p>
                 Ideally, the candidates need to have two years or above in security implementation with appropriate industry certifications.
                 At the mid-management, information security engineers build and maintain information security solutions such as configuring firewalls, testing, investigating the intrusion, and reporting to the manager. The requirements of the job include expertise in vulnerability, penetration testing, encryption, decryption and web, networking protocols.
-                In conclusion An information security professional’s job is quite comprehensive, needing good grounding from the basics to the cutting-edge technology involving cyber forensics. However, with more and more universities and professional bodies offering information security courses, it is no longer difficult to get information security training in this complex area. And it is also offering several challenging assignments for IT professionals
+                In conclusion An information security professionals job is quite comprehensive, needing good grounding from the basics to the cutting-edge technology involving cyber forensics. However, with more and more universities and professional bodies offering information security courses, it is no longer difficult to get information security training in this complex area. And it is also offering several challenging assignments for IT professionals
                 </p>
         </div>
     </div>
