changes made to information security page

--- a/html/careers/information-security.html
+++ b/html/careers/information-security.html
@@ -132,7 +132,7 @@
                 Opportunities are emerging in government, large and small businesses as they increasingly implement IT and net-based solutions. With the cost of information security breach rising to $3.8 mn, organizations are willing to spend more to protect their data and networks.
                 Some of the entry-level to top information security jobs include Chief Information Security Officer, Information Security Engineer, Security Manager, Computer Forensics Expert, Malware Analyst; while at the entry-level university graduates with interest in technology can join the information social security careers business development business with attractive salary and commission. At the entry-level, Risk Consultants interested in working in the areas of compliance, risk management and governance are also sought to deliver solutions for large and complex government organizations.
                 Large organizations such as General Motors are also seeking information security professionals skilled in risk management, information security strategy, threat analysis, data protection, cyber forensics, and other related information security skills.
-                Information Security analysts need to have experience in the implementation of networking routers, switching, setting up firewalls, intrusion detection, and prevention systems. 
+                Information Security analysts need to have experience in the implementation of networking routers, switching, setting up firewalls, intrusion detection and prevention systems. 
             </p>
             
             <p>
