--- a/html/careers/artificial-intelligence.html
+++ b/html/careers/artificial-intelligence.html
@@ -5,8 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Artificial Intelligence</title>
+      <!--google fonts-->
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300&family=Poppins:wght@300&family=Source+Code+Pro:wght@200&family=Twinkle+Star&display=swap" rel="stylesheet">    <!--my stylesheet-->
+      <link rel="stylesheet" href="../../css/style.css" type="text/css">
 </head>
 <body>
+    <!--header-->
+    <div class="header">
+        <a href="#"><button>Join an Event</button></a>
+        <a href="#"><button>Talk to an Expert</button></a>
+            <a href="../../index.html" class="logo">TechGrow</a>
+            <span class="search">
+                <input type="search" id="mySearch" name="q" placeholder="Search career path">
+                <button id="search-btn">Search</button>
+                <a href="#" class="pull-right"><button>Sign Up</button></a>
+                <a href="#" class="pull-right"><button>Login</button></a>
+            </span>
+    </div>
+
+    <!--navigation-->
+        <nav class="nav navigation">
+            <a href="../../index.html" class="nav-item nav-link">Home</a>
+            <a href="../careers.html" class="nav-item nav-link">Careers</a>
+            <a href="../jobs.html" class="nav-item nav-link">jobs</a>
+            <a href="../events.html" class="nav-item nav-link">Events</a>
+        </nav>
+
     <section class="path-description">
         <h1>ARTIFICIAL INTELLIGENCE</h1>
         <p>
@@ -203,5 +230,14 @@
                  </ul>
                 </div>
     </section>
+    <footer>
+        <div class="logo">
+            <a href="../../index.html">TechGrow</a>
+        </div>
+        <div class="useful-links">
+            <a href="../about.html">About Us</a>
+            <a href="../about.html">Contact Us</a>
+        </div>
+    </footer>
 </body>
 </html>
