--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--header-->
         <div class="header">
             <a href="#"><button>Join an Event</button></a>
-            <a href="#"><button>Talk to an Expert</button></a>
+            <a href="html/forms/waitlist.html"><button>Talk to an Expert</button></a>
                 <a href="index.html" class="logo">TechGrow</a>
                 <span class="search">
                     <input type="search" id="mySearch" name="q" placeholder="Search career path">
