several changes made to the styling of pages and form

--- a/html/careers/artificial-intelligence.html
+++ b/html/careers/artificial-intelligence.html
@@ -15,13 +15,13 @@
     <!--header-->
         <div class="header">
             <a href="#"><button>Join an Event</button></a>
-            <a href="#"><button>Talk to an Expert</button></a>
+            <a href="../forms/waitlist.html"><button>Talk to an Expert</button></a>
                 <a href="../../index.html" class="logo">TechGrow</a>
                 <span class="search">
                     <input type="search" id="mySearch" name="q" placeholder="Search career path">
                     <button id="search-btn">Search</button>
-                    <a href="#" class="pull-right"><button>Sign Up</button></a>
-                    <a href="#" class="pull-right"><button>Login</button></a>
+                    <a href="../forms/sign-up.html" >Sign Up</a>
+                    <a href="../forms/login-in.html" >Login</a>
                 </span>
         </div>
 
@@ -136,12 +136,13 @@
         </div>
         <div class="Careers">
             <h3>
-                CAREERS IN ARTIFICIAL INTELLIGENCE
+                SUB CAREERS IN ARTIFICIAL INTELLIGENCE
             </h3>
             <p>
                 There are different artificial intelligent careers and each role has different responsibilities and requires different skills.
+            </p>
                 <ol>
-                <li> 
+                    <li> 
                    <h4>Data Analytic</h4>
                    Finding meaningful patterns in data by looking at the past to help make predictions about the future
                 </li>
@@ -178,7 +179,7 @@
             </p>
         </div>
         <div class="faq">
-            <h3>FAQ on Artificial Intelligence</h3>
+            <h3>Frequent Asked Question on AI</h3>
             <p>
             <ol>
                 <li> 
@@ -230,13 +231,15 @@
                 </div>
     </section>
     <footer>
-        <div class="logo">
+    <!-- <div class="logo">
             <a href="../../index.html">TechGrow</a>
         </div>
+    -->
         <div class="useful-links">
             <a href="../about.html">About Us</a>
-            <a href="../about.html">Contact Us</a>
+            <a href="/html/forms/contact.html">Contact Us</a>
         </div>
+        <p>Copyright &copy; 2022 TechGrow, Inc. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
