--- a/html/careers/information-security.html
+++ b/html/careers/information-security.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>TechGrow-home</title>
+    <title>information security career</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--google fonts-->
@@ -13,25 +13,25 @@
 </head>
 <body>
     <!--header-->
-        <div class="header">
-            <a href="#"><button>Join an Event</button></a>
-            <a href="#"><button>Talk to an Expert</button></a>
-                <a href="../../index.html" class="logo">TechGrow</a>
-                <span class="search">
-                    <input type="search" id="mySearch" name="q" placeholder="Search career path">
-                    <button id="search-btn">Search</button>
-                    <a href="#" class="pull-right"><button>Sign Up</button></a>
-                    <a href="#" class="pull-right"><button>Login</button></a>
-                </span>
-        </div>
+    <div class="header">
+        <a href="#"><button>Join an Event</button></a>
+        <a href="/html/forms/waitlist.html"><button>Talk to an Expert</button></a>
+            <a href="../../index.html" class="logo">TechGrow</a>
+            <span class="search">
+                <input type="search" id="mySearch" name="q" placeholder="Search career path">
+                <button id="search-btn">Search</button>
+                <a href="../forms/sign-up.html" >Sign Up</a>
+                <a href="../forms/login-in.html" >Login</a>
+            </span>
+    </div>
 
-        <!--navigation-->
-            <nav class="nav navigation">
-                <a href="../../index.html" class="nav-item nav-link">Home</a>
-                <a href="../careers.html" class="nav-item nav-link">Careers</a>
-                <a href="../jobs.html" class="nav-item nav-link">jobs</a>
-                <a href="../events.html" class="nav-item nav-link">Events</a>
-            </nav>
+    <!--navigation-->
+        <nav class="nav navigation">
+            <a href="../../index.html" class="nav-item nav-link">Home</a>
+            <a href="../careers.html" class="nav-item nav-link">Careers</a>
+            <a href="../jobs.html" class="nav-item nav-link">jobs</a>
+            <a href="../events.html" class="nav-item nav-link">Events</a>
+        </nav>
 
     <section class="path-description">
         <h1>Information Security</h1>
@@ -68,10 +68,7 @@
                 Firstly it is important to understand information, primarily information from a security perspective 
                 is described as a strategic resource upon which a successful organization depends. On the other hand 
                 Security is the unification of the three facets namely, Confidentiality, Integrity and Availability 
-                commonly called the “CIA” triad. Consider the diagram depicting the triad.
-            
-                <img src="/images/career-images/cia-triad.svg" alt="">
-                    <i> Figure 1: Relationship among confidentiality, Integrity and Availability</i>
+                commonly called the “CIA” triad.
             </p>
 
         </div>
@@ -144,7 +141,7 @@
     </div>
 
         <div class="faq">
-            <h3>FAQ about information security</h3>
+            <h3>Frequentry Asked Questions about information security</h3>
                 <ol>
                     <li>
                         <b> What is Information Security ?</b><br>
@@ -186,11 +183,6 @@
                         </a>            
                     </li>
                     <li>
-                        <a href="https://www.imperva.com/learn/data-security/information-security-infosec/#:~:text=Information%20security%20protects%20sensitive%20information,financial%20data%20or%20intellectual%20property.">
-                            https://www.imperva.com/learn/data-security/information-security-infosec/#:~:text=Information%20security%20protects%20sensitive%20information,financial%20data%20or%20intellectual%20property.
-                        </a>
-                    </li>
-                    <li>
                         <a href="https://www.skillsyouneed.com/rhubarb/information-security-professional.html">
                             https://www.skillsyouneed.com/rhubarb/information-security-professional.html
                         </a>
@@ -210,13 +202,15 @@
             </div>
     </section>
     <footer>
-        <div class="logo">
-            <a href="../../index.html">TechGrow</a>
-        </div>
-        <div class="useful-links">
-            <a href="../about.html">About Us</a>
-            <a href="../about.html">Contact Us</a>
-        </div>
-    </footer>
-</body>
+        <!--    <div class="logo">
+                <a href="../../index.html">TechGrow</a>
+            </div>
+        -->
+            <div class="useful-links">
+                <a href="../about.html">About Us</a>
+                <a href="/html/forms/contact.html">Contact Us</a>
+            </div>
+            <p>Copyright &copy; 2022 TechGrow, Inc. All Rights Reserved.</p>
+        </footer>
+    </body>
 </html>
